[package]
name = "watchtower-race-fe"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Burkhart <Andrew.Burkhart@agilebits.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
serde = { version = "1.0", features = ["derive"] }
strum = "0.24.1"
strum_macros = "0.24.2"
gloo = "0.8.0"
# chrono = "0.4.19"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]

# https://github.com/yewstack/yew/blob/yew-v0.19.3/examples/function_todomvc